2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawable.c
	* libgimp/gimppixelfetcher.c
	* libgimp/gimpprogress.c
	* libgimp/gimppixelrgn.c
	* libgimp/gimpregioniterator.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushmenu.c
	* libgimp/gimpgradientmenu.c
	* libgimp/gimpfontmenu.c
	* libgimp/gimppatternmenu.c
	* libgimp/gimppalettemenu.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselect.c
	* libgimp/gimpgradientselect.c
	* libgimp/gimpfontselect.c
	* libgimp/gimppatternselect.c
	* libgimp/gimppaletteselect.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpprotocol.c: allocate structs using GSlice.

	* libgimpmodule/gimpmodule.c: allocate GimpModuleInfo using GSlice.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-params.c (plug_in_args_to_params): free
	parasites using gimp_parasite_free()

	* libgimp/gimp.c (gimp_run_procedure2): free wire messages using
	gimp_wire_destroy().

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.c
	* libgimpwidgets/gimpquerybox.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfigwriter.c: use GSlice for the
	GimpConfigWriter struct.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/main.c (gimp_dbus_open): initialize "uri" to NULL.
	#include "file/file-utils.h"

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager-private.h: formatting.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/actions/data-commands.c
	* app/base/boundary.c
	* app/base/gimphistogram.c
	* app/base/gimplut.c
	* app/base/temp-buf.c
	* app/core/gimpcontainer.c
	* app/core/gimpgradient.c
	* app/core/gimpparamspecs.c
	* app/core/gimpundo.c
	* app/plug-in/gimpplugin-cleanup.c
	* app/plug-in/gimppluginmanager-data.c
	* app/plug-in/gimppluginmanager-help-domain.c